--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,24 @@
+* {
+    box-sizing: border-box;
+    letter-spacing: 1px;
+    line-height: 2rem;
+}
+
 a {
     all: unset;
     cursor: pointer;
+}
+
+body {
+    font-family: 'Arial', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
 }
