--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,3 +22,59 @@ h6,
 p {
     margin-top: 0;
 }
+
+hr {
+    border: 1px solid #d5d5d5;
+}
+
+.text-primary {
+    color: #f4a261;
+}
+
+.hover-effect {
+    display: inline-block;
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -1px;
+        display: block;
+        width: 100%;
+        height: 1px;
+        background: currentColor;
+        border-radius: 4px;
+        transform-origin: right;
+        transform: scaleX(0);
+        transition: transform 0.3s ease-in-out;
+    }
+
+    &:hover::after {
+        transform-origin: left;
+        transform: scaleX(1);
+    }
+}
+
+.btn {
+    padding: 0.75rem 1.5rem;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: #eee;
+    border: 1px solid #eee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 0.25rem;
+
+    &:hover {
+        background-color: #d5d5d5;
+    }
+}
+
+.mt-1 {
+    margin-top: 0.5rem;
+}
+
+.mt-2 {
+    margin-top: 2rem;
+}
