--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 * {
     box-sizing: border-box;
     letter-spacing: 1px;
@@ -27,8 +29,19 @@ hr {
     border: 1px solid #d5d5d5;
 }
 
+.title-primary {
+    width: fit-content;
+    padding: 0.25rem;
+    background-color: var(--primary-800);
+    color: var(--primary-25);
+}
+
 .text-primary {
-    color: #f4a261;
+    color: var(--primary-800);
+
+    &:hover {
+        color: var(--primary-900);
+    }
 }
 
 .hover-effect {
