chore: change whoami img
improve css

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -30,7 +30,7 @@ hr {
     border: 1px solid #d5d5d5;
 }
 
-.title-primary {
+.background-primary {
     width: fit-content;
     padding: 0.25rem;
     background-color: var(--primary-800);
