--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -80,8 +80,29 @@ hr {
     align-items: center;
     column-gap: 0.25rem;
 
+    transition: all 0.2s ease;
+
     &:hover {
         background-color: #d5d5d5;
+    }
+
+    &.btn-primary {
+        background-color: var(--primary-800);
+        color: white;
+
+        &:hover {
+            background-color: var(--primary-900);
+        }
+
+        &[disabled] {
+            background-color: #eee;
+            color: #777;
+            cursor: default;
+        }
+    }
+
+    .nuxt-icon * {
+        stroke: currentColor;
     }
 }
 
