--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,6 +14,7 @@ a {
 body {
     font-family: 'Arial', sans-serif;
     background-color: white;
+    color: var(--text-color);
 }
 
 h1,
@@ -52,7 +53,7 @@ hr {
     &::after {
         content: '';
         position: absolute;
-        bottom: -1px;
+        bottom: 4px;
         display: block;
         width: 100%;
         height: 1px;
@@ -100,10 +101,6 @@ hr {
             cursor: default;
         }
     }
-
-    .nuxt-icon * {
-        stroke: currentColor;
-    }
 }
 
 .mt-1 {
@@ -112,4 +109,12 @@ hr {
 
 .mt-2 {
     margin-top: 2rem;
+}
+
+.nuxt-icon:not(.nuxt-icon--fill) * {
+    stroke: currentColor;
+}
+
+.nuxt-icon svg {
+    margin-bottom: 0 !important;
 }
