--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -5,8 +5,12 @@
     --primary-700: #56d37a;
     --primary-600: #74db91;
     --primary-500: #92e3a9;
+    --primary-400: #b8ecc7;
+    --primary-300: #c8f1d4;
     --primary-200: #def6e5;
     --primary-100: #e9f9ed;
     --primary-50: #eefaf2;
     --primary-25: #f4fcf6;
+
+    --text-color: #1a303a;
 }
