--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,9 +33,9 @@ hr {
 
 .background-primary {
     width: fit-content;
-    padding: 0.25rem;
     background-color: var(--primary-800);
     color: var(--primary-25);
+    padding: 0.25rem 1rem;
 }
 
 .text-primary {
