--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -12,5 +12,13 @@
     --primary-50: #eefaf2;
     --primary-25: #f4fcf6;
 
+    --anti-primary-800: #ffb60a;
+    --anti-primary-700: #ffc847;
+    --anti-primary-600: #ffce5c;
+    --anti-primary-500: #ffda85;
+    --anti-primary-400: #ffe099;
+    --anti-primary-200: #ffe7ad;
+    --anti-primary-100: #ffedc2;
+
     --text-color: #1a303a;
 }
