feat: add animation to menu

--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -19,6 +19,8 @@
     --anti-primary-400: #ffe099;
     --anti-primary-200: #ffe7ad;
     --anti-primary-100: #ffedc2;
+    --anti-primary-50: #fff9eb;
+    --anti-primary-25: #fffcf5;
 
     --text-color: #1a303a;
 }
