--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,7 +3,11 @@
 * {
     box-sizing: border-box;
     letter-spacing: 1px;
-    line-height: 2rem;
+    line-height: 1.5rem;
+
+    @media (min-width: 768px) {
+        line-height: 2rem;
+    }
 }
 
 a {
@@ -40,6 +44,10 @@ hr {
     background-color: var(--primary-800);
     color: var(--primary-25);
     padding: 0.25rem 1rem;
+
+    &.background-sm {
+        padding: 0 0.25rem;
+    }
 }
 
 .text-primary {
